# gpuRIR

./: .gitignore  4_src_mixing.py  Angle.pptx  CMakeLists.txt  README.md  RIR.py  Reverb.py  mixing.py  setup.py
examples/: SNR.py  merge.py  moving_src_fixed_rec.py  moving_src_moving_rec.py  simulate_trajectory.py
tmp/: crop_center.ipynb  n_traj_n_frame.ipynb  np_dim_check.ipynb
